--- a/html/coverletter.html
+++ b/html/coverletter.html
@@ -4,16 +4,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="..\css\coverletter.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
   <title>💗 링링 💗</title>
 </head>
 <body>
-  <h1> 📞 RingRing Can I Hit Your Phone ?</h1>
+  <h1 class="header"> 📞 RingRing Can I Hit Your Phone ?</h1>
   
   <br>
 
   <div class="intro">
     <div class = "introImg">
-      <img src="..\images\coverimage.jpg" width="400">
+      <img src="..\images\coverimage.jpg" width="450">
     </div>  
 
     <div class = "introMessage">
@@ -29,7 +32,7 @@
 
   <br>
 
-  <h1>🎞 인생 영화 BEST 5</h1>
+  <h1 class="header">🎞 인생 영화 BEST 5</h1>
   <div class ="movie">
     <div class = "moviePoster">
       <img src="..\images\terminator_poster.jpg" height="300">
@@ -62,16 +65,16 @@
     <br>
     <h1> 💌 방명록 </h1>
     <div class = "guest">
-      <p> 이름 : <input style="zoom: 2.0;"> </p>
-      <input type="checkbox" class="checkbox">터미네이터
-      <input type="checkbox" class="checkbox">다크나이트
-      <input type="checkbox" class="checkbox">트랜스포머
-      <input type="checkbox" class="checkbox">위대한쇼맨 
-      <input type="checkbox" class="checkbox">맨 인 블랙
-      <br>
-      <br>
-      <button class="button">등록</button>
-      <button class="button">취소</button>
+      <p> 이름 : <input type = "text" style="zoom: 2.0;">
+        &nbsp; &nbsp;
+        <button class="button">등록</button> 
+        <button class="button">취소</button>
+      </p>
+      <input type="checkbox" class="checkmovie">터미네이터
+      <input type="checkbox" class="checkmovie">다크나이트
+      <input type="checkbox" class="checkmovie">트랜스포머
+      <input type="checkbox" class="checkmovie">위대한쇼맨 
+      <input type="checkbox" class="checkmovie">맨 인 블랙
     </div>
   </div>
 </body>
