--- a/html/coverletter.html
+++ b/html/coverletter.html
@@ -29,6 +29,30 @@
       <p> 🖤 <a href="https://music.youtube.com/watch?v=wZgsxnYqHps&feature=share" target="_blank">검정색하트</a>
         : Toil (feat. Leellamarz, BE'O)</p>
     </div>
+
+    <div></div>
+
+    <div class ="guestBook"> 
+      <br>
+      <h1> 💌 방명록 </h1>
+      <div class = "guest">
+        <p > 이름 : <input type = "text" id="guestName" value="" style="zoom: 2.0;border: none;background-color: azure;">
+          &nbsp; &nbsp;
+          <button type ="button" class = "button" id="btnRegister">등록</button> 
+          <button type = "reset" class = "button" id="btnCancel">취소</button>
+        </p>
+        <p> 본인 취향의 영화를 선택해 주세요 ~ 😊</p>
+        <input type="checkbox" class="checkmovie" name="movie" value="terminator">터미네이터
+        <input type="checkbox" class="checkmovie" name="movie" value="darknight">다크나이트
+        <input type="checkbox" class="checkmovie" name="movie" value="transformers">트랜스포머
+        <input type="checkbox" class="checkmovie" name="movie" value="thegreatestshowman">위대한쇼맨 
+        <input type="checkbox" class="checkmovie" name="movie" value="meninblack">맨 인 블랙
+      </div>
+      <div class="result">
+        <p>👻 다녀간 사람 </p>
+        <div id="result"></div>
+      </div>
+    </div>
   </div>
 
   <br>
@@ -72,22 +96,6 @@
       </tr>
   </table>
 
-  <div class ="guestBook"> 
-    <br>
-    <h1> 💌 방명록 </h1>
-    <div class = "guest">
-      <p > 이름 : <input type = "text" id="guestName" value="" style="zoom: 2.0;border: none;background-color: azure;">
-        &nbsp; &nbsp;
-        <button type ="button" class = "button" id="btnRegister">등록</button> 
-        <button type = "reset" class = "button" id="btnCancel">취소</button>
-      </p>
-      <p> 본인 취향의 영화를 선택해 주세요 ~ 😊</p>
-      <input type="checkbox" class="checkmovie" name="movie" value="terminator" style="border: none;background-color: azure;">터미네이터
-      <input type="checkbox" class="checkmovie" name="movie" value="darknight">다크나이트
-      <input type="checkbox" class="checkmovie" name="movie" value="transformers">트랜스포머
-      <input type="checkbox" class="checkmovie" name="movie" value="thegreatestshowman">위대한쇼맨 
-      <input type="checkbox" class="checkmovie" name="movie" value="meninblack">맨 인 블랙
-    </div>
-  </div>
+  
 </body>
 </html>
